--- a/.github/workflows/publish_alpha_to_alpha_ec.yml
+++ b/.github/workflows/publish_alpha_to_alpha_ec.yml
@@ -9,7 +9,9 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
+    - uses: actions/checkout@v2
+      with:
+        rep: master  
     - uses: jakejarvis/s3-sync-action@master
       with:
         args: --acl public-read --follow-symlinks --delete
