--- a/.github/workflows/publish_alpha_to_alpha_ec.yml
+++ b/.github/workflows/publish_alpha_to_alpha_ec.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       with:
-        rep: master  
+        ref: master  
     - uses: jakejarvis/s3-sync-action@master
       with:
         args: --acl public-read --follow-symlinks --delete
