--- a/.github/workflows/publish_alpha_to_alpha_ec.yml
+++ b/.github/workflows/publish_alpha_to_alpha_ec.yml
@@ -18,6 +18,6 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_REGION: 'us-west-1'   # optional: defaults to us-east-1
-        AWS_S3_ENDPOINT: ${{ secrets.AS3_GEODEX_ENDPOINT }}
+        AWS_S3_ENDPOINT: ${{ secrets.S3_GEODEX_ENDPOINT }}
         SOURCE_DIR: 'alpha/website'      # optional: defaults to entire repository
         DEST_DIR: 'alpha/website'
