add gitignore and update workflow.

--- a/.github/workflows/publish_gecodes_branch_websites.yml
+++ b/.github/workflows/publish_gecodes_branch_websites.yml
@@ -1,9 +1,9 @@
-name: Upload geicides_boostrap to Websites
+name: Upload geocodes_bootstrap to Websites
 
 on:
   push:
     branches:
-    - geocodes_bootstrap
+    - geocodes_boostrap
 
 jobs:
 
