--- a/.github/workflows/publish_alpha_to_alpha_ec.yml
+++ b/.github/workflows/publish_alpha_to_alpha_ec.yml
@@ -9,7 +9,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2 
+    - uses: actions/checkout@v2
     - uses: jakejarvis/s3-sync-action@master
       with:
         args: --acl public-read --follow-symlinks --delete
@@ -20,4 +20,4 @@ jobs:
         AWS_REGION: 'us-west-1'   # optional: defaults to us-east-1
         AWS_S3_ENDPOINT: ${{ secrets.S3_GEODEX_ENDPOINT }}
         SOURCE_DIR: 'alpha/website'      # optional: defaults to entire repository
-        DEST_DIR: 'alpha/website'
+        DEST_DIR: 'beta/website'
